--- a/src/app/modules/gsa-provide/views/home/home.component.html
+++ b/src/app/modules/gsa-provide/views/home/home.component.html
@@ -11,7 +11,7 @@
             <hr class="my-4 border-bottom">
             <p class=" gsa-medium-blue">Learn more about how to become a federal marketplace vendor or complete a questionnaire to find out if you business qualifies.</p>
             <p class="lead">
-              <a class="btn btn-primary" href="#" role="button">Learn More</a>&nbsp;&nbsp;&nbsp;or&nbsp;&nbsp;&nbsp;<a class="btn btn-primary" href="#" role="button">Start Questionnaire</a>
+              <a class="btn btn-primary" [routerLink]="['/vendor-resources']" role="button">Learn More</a>&nbsp;&nbsp;&nbsp;or&nbsp;&nbsp;&nbsp;<a class="btn btn-primary" href="#" role="button">Start Questionnaire</a>
             </p>
           </div>
       </div>
