--- a/src/app/modules/supplier-portal/layouts/supplier-portal-header/supplier-portal-header.component.html
+++ b/src/app/modules/supplier-portal/layouts/supplier-portal-header/supplier-portal-header.component.html
@@ -8,7 +8,7 @@
     <div style="
       display: inline-block;
       vertical-align: bottom;">
-      <h4 class="gsa-red"><b>Offer Portal</b></h4>
+      <h4 class="gsa-red"><b>Offers/Mods</b></h4>
     </div>
   </div>
   <!-- eof BRANDING -->
@@ -26,149 +26,17 @@
 
     <ul class="navbar-nav">
 
-      <li class="nav-item active">
-        <button [routerLink]="['/home']" routerLinkActive="active" id="button-home" type="button" class="btn nav-link"
-          style="white-space: nowrap;">
-          <span class="fal fa-home mr-1"></span>
-          <span class="nav-link-label">Home</span>
-        </button>
-      </li>
 
-      <li class="nav-item btn-group" dropdown>
-        <button id="access-point" dropdownToggle type="button" class="btn nav-link dropdown-toggle" aria-controls="access-point-dropdown">
-          <span class="fal fa-chart-network mr-1"></span>
-          <span class="nav-link-label">Access Point</span>
-          <span class="caret"></span>
-        </button>
-        <ul id="access-point-dropdown" *dropdownMenu class="dropdown-menu dropdown-menu-right p-2 d-flex justify-content-start flex-wrap shadow" role="menu"        
-          aria-labelledby="access-point" style="max-width: 500px; min-width: 500px;">
-
-          <li role="menuitem" class="col-4 p-2 m-0">
-            <a [routerLink]="['/access-point']" routerLinkActive="active">
-              <div class="card btn btn-default m-0">
-                <div class="card-body p-0 d-flex flex-column">
-                    <div class="p-0 d-flex justify-content-center">
-                        <span class="fa fa-chart-network gsa-medium-blue" style="width: 40px; height: 40px; font-size: 36px; margin-left: -8px; text-decoration: none !important;"></span>
-                    </div>
-                    <span class="flex p-0 text-center p-2">
-                        <b class="gsa-red">Access Point</b>
-                    </span>
-                </div>
-            </div>
-            </a>
-          </li>          
-          <li role="menuitem" class="col-4 p-2 m-0">
-            <a href="#" routerLinkActive="active">
-              <div class="card btn btn-default m-0">
-                <div class="card-body p-0 d-flex flex-column">
-                    <div class="p-0 d-flex justify-content-center">
-                        <img src="assets/images/star-mark-80.png" alt="" style="width: 40px; height: 40px;">
-                    </div>
-                    <span class="flex p-0 text-center p-2">
-                        <b class="gsa-red">Advantage!</b>
-                    </span>
-                </div>
-            </div>
-            </a>
-          </li>
-          <li role="menuitem" class="col-4 p-2 m-0">
-            <a href="#" routerLinkActive="active">
-              <div class="card btn btn-default m-0">
-                <div class="card-body p-0 d-flex flex-column">
-                    <div class="p-0 d-flex justify-content-center">
-                        <img src="assets/images/star-mark-80.png" alt="" style="width: 40px; height: 40px;">
-                    </div>
-                    <span class="flex p-0 text-center p-2">
-                        <b class="gsa-red">eBuy</b>
-                    </span>
-                </div>
-            </div>
-            </a>
-          </li>
-          <li role="menuitem" class="col-4 p-2 m-0">
-            <a href="#" routerLinkActive="active">
-              <div class="card btn btn-default m-0">
-                <div class="card-body p-0 d-flex flex-column">
-                    <div class="p-0 d-flex justify-content-center">
-                        <img src="assets/images/star-mark-80.png" alt="" style="width: 40px; height: 40px;">
-                    </div>
-                    <span class="flex p-0 text-center p-2">
-                        <b class="gsa-red">SAM</b>
-                    </span>
-                </div>
-            </div>
-            </a>
-          </li>
-          <li role="menuitem" class="col-4 p-2 m-0">
-            <a href="#" routerLinkActive="active">
-              <div class="card btn btn-default m-0">
-                <div class="card-body p-0 d-flex flex-column">
-                    <div class="p-0 d-flex justify-content-center">
-                        <img src="assets/images/star-mark-80.png" alt="" style="width: 40px; height: 40px;">
-                    </div>
-                    <span class="flex p-0 text-center p-2">
-                        <b class="gsa-red">Offer Portal</b>
-                    </span>
-                </div>
-            </div>
-            </a>
-          </li>
-          <li role="menuitem" class="col-4 p-2 m-0">
-            <a href="#" routerLinkActive="active">
-              <div class="card btn btn-default m-0">
-                <div class="card-body p-0 d-flex flex-column">
-                    <div class="p-0 d-flex justify-content-center">
-                        <img src="assets/images/star-mark-80.png" alt="" style="width: 40px; height: 40px;">
-                    </div>
-                    <span class="flex p-0 text-center p-2">
-                        <b class="gsa-red">PO Portal</b>
-                    </span>
-                </div>
-            </div>
-            </a>
-          </li>
-          <li role="menuitem" class="col-4 p-2 m-0">
-            <a href="#" routerLinkActive="active">
-              <div class="card btn btn-default m-0">
-                <div class="card-body p-0 d-flex flex-column">
-                    <div class="p-0 d-flex justify-content-center">
-                        <img src="assets/images/star-mark-80.png" alt="" style="width: 40px; height: 40px;">
-                    </div>
-                    <span class="flex p-0 text-center p-2">
-                        <b class="gsa-red">FAS SRP</b>
-                    </span>
-                </div>
-            </div>
-            </a>
-          </li>          
-          <li role="menuitem" class="col-4 p-2 m-0">
-            <a href="#" routerLinkActive="active">
-              <div class="card btn btn-default m-0">
-                <div class="card-body p-0 d-flex flex-column">
-                    <div class="p-0 d-flex justify-content-center">
-                        <img src="assets/images/star-mark-80.png" alt="" style="width: 40px; height: 40px;">
-                    </div>
-                    <span class="flex p-0 text-center p-2">
-                        <b class="gsa-red">eLibrary</b>
-                    </span>
-                </div>
-            </div>
-            </a>
-          </li>
-
-        </ul>
-      </li>
-
-      <li class="nav-item active">
+      <li class="nav-item active" *ngIf="showOffersLink">
         <button [routerLink]="['/supplier-portal/home']" routerLinkActive="active" id="button-home" type="button"
           class="btn nav-link" style="white-space: nowrap;">
-          <span class="fal fa-file-contract mr-1"></span>
+          <span class="fal fa-file-contract mr-2"></span>
           <span class="nav-link-label">Offers</span>
         </button>
       </li>
 
       <li class="nav-item active">
-        <button [routerLink]="['/project-center']" routerLinkActive="active" id="button-home" type="button"
+        <button href="#" routerLinkActive="active" id="button-home" type="button"
           class="btn nav-link" style="white-space: nowrap;">
           <span class="fal fa-bell mr-1"></span>
           <span class="nav-link-label">Alerts</span>
@@ -188,7 +56,7 @@
       <li class="nav-item btn-group" dropdown>
         <button id="button-basic" dropdownToggle type="button" class="btn nav-link dropdown-toggle"
           aria-controls="dropdown-basic">
-          <span class="fal fa-user mr-1"></span> <span class="nav-link-label">Account</span> <span class="caret"></span>
+          <span class="fas fa-user mr-1"></span> <span class="nav-link-label">Account</span> <span class="caret"></span>
         </button>
         <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu"
           aria-labelledby="button-basic">
@@ -207,7 +75,88 @@
         </ul>
       </li>
 
-      
+      <li class="nav-item btn-group" dropdown>
+        <button id="access-point" dropdownToggle type="button" class="btn nav-link dropdown-toggle" aria-controls="access-point-dropdown">
+          <span class="fas fa-th mr-2"></span>
+          <span class="nav-link-label">Apps</span>
+          <span class="caret"></span>
+        </button>
+        <ul id="access-point-dropdown" *dropdownMenu class="dropdown-menu dropdown-menu-right p-2 d-flex justify-content-start flex-wrap shadow" role="menu"        
+          aria-labelledby="access-point" style="max-width: 500px; min-width: 500px;">
+
+          <li role="menuitem" class="col-4 p-2 m-0">
+            <a [routerLink]="['/access-point']" routerLinkActive="active">
+              <div class="card btn btn-default m-0">
+                <div class="card-body p-0 d-flex flex-column">
+                    <div class="p-0 d-flex justify-content-center">
+                        <span class="fad fa-chart-network  gsa-medium-blue mt-2 mb-1" style="width: 40px; height: 40px; font-size: 36px; text-decoration: none !important;"></span>
+                    </div>
+                    <span class=" flex p-0 text-center pb-1">
+                        <b class="gsa-red">Vendor Portal</b>
+                    </span>
+                </div>
+            </div>
+            </a>
+          </li>
+          <li role="menuitem" class="col-4 p-2 m-0">
+            <a href="#" routerLinkActive="active">
+              <div class="card btn btn-default m-0">
+                <div class="card-body p-0 d-flex flex-column">
+                    <div class="p-0 d-flex justify-content-center">
+                      <span class="fad fa-file-invoice color-green mt-2 mb-1" style="width: 40px; height: 40px; font-size: 36px; text-decoration: none !important;"></span>
+                    </div>
+                    <span class=" flex p-0 text-center pb-1">
+                        <b class="gsa-red">Offers/Mods</b>
+                    </span>
+                </div>
+            </div>
+            </a>
+          </li>
+          <li role="menuitem" class="col-4 p-2 m-0">
+            <a href="#" routerLinkActive="active">
+              <div class="card btn btn-default m-0">
+                <div class="card-body p-0 d-flex flex-column">
+                    <div class="p-0 d-flex justify-content-center">
+                      <span class="fad fa-file-edit color-orange mt-2 mb-1" style="width: 40px; height: 40px; font-size: 36px; text-decoration: none !important;"></span>
+                    </div>
+                    <span class=" flex p-0 text-center pb-1">
+                        <b class="gsa-red">Mass Mods</b>
+                    </span>
+                </div>
+            </div>
+            </a>
+          </li>
+          <li role="menuitem" class="col-4 p-2 m-0">
+            <a href="#" routerLinkActive="active">
+              <div class="card btn btn-default m-0">
+                <div class="card-body p-0 d-flex flex-column">
+                    <div class="p-0 d-flex justify-content-center">
+                      <span class="fad fa-file-invoice-dollar color-purple mt-2 mb-1" style="width: 40px; height: 40px; font-size: 36px; text-decoration: none !important;"></span>
+                    </div>
+                    <span class=" flex p-0 text-center pb-1">
+                        <b class="gsa-red">P.O.'s</b>
+                    </span>
+                </div>
+            </div>
+            </a>
+          </li>
+          <li role="menuitem" class="col-4 p-2 m-0">
+            <a href="#" routerLinkActive="active">
+              <div class="card btn btn-default m-0">
+                <div class="card-body p-0 d-flex flex-column">
+                    <div class="p-0 d-flex justify-content-center">
+                      <span class="fad fa-file-chart-line color-teal mt-2 mb-1" style="width: 40px; height: 40px; font-size: 36px; text-decoration: none !important;"></span>
+                    </div>
+                    <span class=" flex p-0 text-center pb-1">
+                        <b class="gsa-red">Sales Reports</b>
+                    </span>
+                </div>
+            </div>
+            </a>
+          </li>
+        </ul>
+      </li>
+
     </ul>
   </div>
 </nav>
