--- a/src/app/modules/supplier-portal/views/offer-form/submit-offer/submit-offer.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/submit-offer/submit-offer.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="offerStatus == 'In Progress'">
-    <a class="btn btn-primary my-3 btn-lg btn-block" (click)="submitOffer()">Submit</a>
+    <button type="button" class="btn btn-success my-3 btn-lg btn-block" (click)="submitOffer()">Submit</button>
 </ng-container>
 
 <ng-container *ngIf="offerStatus == 'Signed'">
-    <a class="btn btn-primary my-3 btn-lg btn-block" (click)="submitOffer()">Sign</a>
+    <button type="button" class="btn btn-success my-3 btn-lg btn-block" (click)="submitOffer()">Sign</button>
 </ng-container>
