--- a/src/app/modules/supplier-portal/views/supplier-portal-home/supplier-portal-home.component.html
+++ b/src/app/modules/supplier-portal/views/supplier-portal-home/supplier-portal-home.component.html
@@ -1,4 +1,32 @@
-<app-organization-details-banner></app-organization-details-banner>
+<section class="shadow bg-gsa-medium-blue white d-block sticky-top-content" style="z-index: 8;">
+    <div class="container py-2">
+        <div class="row justify-content-center">
+            <div class="col-md">
+                <small>Company Name:&nbsp;&nbsp;</small>
+                <br class="d-sm-none d-md-block" />Global Supplier Inc.
+            </div>
+            <div class="col-md">
+                <small>UEI:&nbsp;&nbsp;</small>
+                <br class="d-sm-none d-md-block" /> 39487SU383
+            </div>
+            <div class="col-md">
+                <!-- <small>Schedule:&nbsp;&nbsp;</small>
+                <br class="d-sm-none d-md-block" /> MAS - Multiple Award Schedule -->
+            </div>
+            <div class="col-md">
+                <!-- <small>Status:&nbsp;&nbsp;</small>
+                <br class="d-sm-none d-md-block" />
+                <select class="bg-transparent bw-0 nav-link white py-1 px-0 line-h-1 text-left" (change)="updateStatus($event.target.value)">
+                    <option value="In Progress" selected>In Progress</option>
+                    <option value="Submitted">Submitted</option>
+                    <option value="Signed">Signed</option>
+                    <option value="Awarded">Awarded</option>
+                </select> -->
+            </div>
+        </div>
+    </div>
+</section>
+
 
 <div class="container py-5">
     <div class="row">
