--- a/src/app/modules/supplier-portal/components/organization-details-banner/organization-details-banner.component.html
+++ b/src/app/modules/supplier-portal/components/organization-details-banner/organization-details-banner.component.html
@@ -1,9 +1,13 @@
-<section class="shadow bg-gsa-light-blue white d-block sticky-top-content" style="z-index: 8;">
-    <div class="container py-2">
+<section class="shadow bg-gsa-medium-blue white d-block sticky-top-content" style="z-index: 8;">
+    <div class="container-fluid py-2 px-5">
         <div class="row justify-content-center">
             <div class="col-md">
                 <small>Company Name:&nbsp;&nbsp;</small>
                 <br class="d-sm-none d-md-block" />Global Supplier Inc.
+            </div>
+            <div class="col-md">
+                <small>UEI:&nbsp;&nbsp;</small>
+                <br class="d-sm-none d-md-block" /> 39487SU383
             </div>
             <div class="col-md">
                 <small>Solicitaion Number:&nbsp;&nbsp;</small>
@@ -17,10 +21,10 @@
                 <small>Status:&nbsp;&nbsp;</small>
                 <br class="d-sm-none d-md-block" />
                 <select class="bg-transparent bw-0 nav-link white py-1 px-0 line-h-1 text-left" (change)="updateStatus($event.target.value)">
-                    <option value="In Progress" selected>In Progress</option>
-                    <option value="Submitted">Submitted</option>
-                    <option value="Signed">Signed</option>
-                    <option value="Awarded">Awarded</option>
+                    <option value="In Progress" selected style="color: initial;">In Progress</option>
+                    <option value="Submitted" style="color: initial;">Submitted</option>
+                    <option value="Signed" style="color: initial;">Signed</option>
+                    <option value="Awarded" style="color: initial;">Awarded</option>
                 </select>
             </div>
         </div>
